Example for sadi

--- a/Algorithm/Practice/Asssignment_01/HTML/practice.html
+++ b/Algorithm/Practice/Asssignment_01/HTML/practice.html
@@ -14,5 +14,20 @@
     <h1>Welcome to MY First Page</h1>
     <p>This is a paragraph on my first page.</p>
     <p>this is a container </p>
+    <p style="color: blue; text-align: center; background-color: lightblue; font-size: 50px;">My name is Sayed Hasan Sami</p>
+    <p><del>Hi, I am Sami</del> Hi, I am Sami</p>
+    <p> <mark>Important text H<sub>2</sub>0</mark></p>
+    <p> (a+b)<sup>2</sup></p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore temporibus excepturi, quisquam dolorem inventore dolorum nam accusantium aut. Repellendus vitae quis voluptas sequi! Laborum minima fuga, sit non totam iure.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis distinctio reprehenderit id expedita <br>voluptatum! Id dolores blanditiis, dolor, <br>
+    
+    
+    <br>illum soluta praesentium laborum totam deserunt tempore, minus tenetur sapiente? Quae porro temporibus repudiandae obcaecati ex minima officia aut voluptatem ea nam quas, similique aspernatur libero amet nisi, animi deleniti suscipit quos tenetur. Illo ratione reiciendis nostrum aut, nihil rerum repellat, possimus laboriosam voluptatem blanditiis minus et eligendi? Voluptate velit earum esse, aliquid provident, omnis, sit aspernatur perspiciatis nostrum inventore dicta molestias quas facilis! Facere aut, rem perferendis numquam adipisci quis praesentium sequi itaque eaque, deserunt aperiam iure placeat sed eius delectus eligendi quasi culpa voluptates iusto aliquam aspernatur commodi corrupti laborum. Odio libero, adipisci itaque odit natus deserunt veritatis et totam sit culpa maxime obcaecati porro ea ipsa ab id, consectetur unde facilis a temporibus maiores suscipit illo voluptate? Temporibus ea velit expedita. Aspernatur facere mollitia, rerum, voluptatum doloribus, quae quas vel earum necessitatibus dolor optio suscipit explicabo vero neque magni quidem. Perferendis, consequuntur molestiae! Aliquid tempore, recusandae tenetur minus, doloremque rerum numquam beatae, sint in adipisci sed excepturi quae facere asperiores esse similique deserunt magnam nisi qui debitis necessitatibus dignissimos totam eius! Praesentium, expedita maxime? Ad temporibus provident totam magni.
+
+
+
+    <p> sami says, <q>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur ipsum facilis similique, atque sequi quia? Minima exercitationem debitis quos, quam officia vel, nostrum aperiam repudiandae, aliquam quo saepe fuga nihil. </q></p>
+    <a href="https://www.google.com" target="_blank">This is google</a>
+    <img src="image.jpg" alt="Description of image">
 </body>
 </html>
